Fixed misaligned styling

--- a/assets/css/youkok.css
+++ b/assets/css/youkok.css
@@ -490,6 +490,7 @@ a, a:focus, a:active, a:visited {
     background-color: #ededed;
     border-radius: 4px;
     padding: 15px;
+    padding-bottom: 5px;
 }
 .breadcrumb {
     border-width: 1px 1px 4px;
